[tool.poetry]
name = "jlaselect"
version = "0.1.0"
description = ""
authors = ["Ryuuji Yoshimoto <ryuuji@calil.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "*"
isbnlib = "*"


[tool.poetry.group.dev.dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
